--- a/src/assets/pages/screencast.module.css
+++ b/src/assets/pages/screencast.module.css
@@ -2,13 +2,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 100px;
 }
 
 .screencast__left{
     flex: 50%;
     padding: 50px;
 }
- .screencast__right img{
+ .screencast__right video{
     margin-top: 50px;
     border-radius: 20px;
     width: 80%;
