--- a/src/assets/pages/screencast.module.css
+++ b/src/assets/pages/screencast.module.css
@@ -9,7 +9,7 @@
     flex: 50%;
     padding: 50px;
 }
- .screencast__right video{
+ .screencast__right iframe{
     margin-top: 50px;
     border-radius: 20px;
     width: 80%;
